cmake_minimum_required(VERSION 3.10)
#set(CMAKE_Fortran_COMPILER mpiifx)
#set(CMAKE_VERBOSE_MAKEFILE ON)
project(qmc)
enable_language(Fortran)

# AVX512 support
option(ENABLE_AVX512 "CPU Support AVX512" OFF)
option(ONLY_SSE "CPU Only Support SSE4.2" OFF)
if(ENABLE_AVX512)
    set(arch_opt_flags " -xCORE-AVX512 -qopt-zmm-usage=high ")
else()
    set(arch_opt_flags " -march=core-avx2 ")
    if(ONLY_SSE)
        set(arch_opt_flags " -march=core-sse4.2 ")
    endif()
endif()

# set debug option and compiler options for linux machine
option(ENABLE_DEBUG "Enable Debug" OFF)
option(ENABLE_GPROF "Enable Profiling" OFF)
if(ENABLE_DEBUG)
    set(CMAKE_BUILD_TYPE debug)
    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fpp -warn all -check bounds -check pointers -check format -traceback -g -diag-disable=5462")
else()
    set(CMAKE_BUILD_TYPE release)
    if (ENABLE_GPROF)
        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${arch_opt_flags} -fpp -align all -diag-disable=5462 -pg")
    else()
        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${arch_opt_flags} -fpp -align all -diag-disable=5462")
    endif()
endif()

# set debug option and compiler options for mac
if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
    if(ENABLE_DEBUG)
        set(CMAKE_BUILD_TYPE debug)
        #set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -ffpe-trap=overflow")
        #set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -g -fcheck=all")
        #set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -g -ffpe-trap=zero")
        #set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -g")
        #set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -g -ffpe-summary=none")
        set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -g -ffpe-summary=none -fcheck=all -fbacktrace")
    else()
        set(CMAKE_BUILD_TYPE release)
        set(CMAKE_Fortran_FLAGS "-cpp -ffree-line-length-none -fallow-argument-mismatch -ffpe-summary=none")
    endif()
endif()
# set OpenMP Option
option(ENABLE_OPENMP "Enable OpenMP" OFF)
if(ENABLE_OPENMP)
    find_package(OpenMP)
    #set(OpenMP_Fortran_FLAGS "-qopenmp")
    if(ENABLE_DEBUG)
        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
        message(STATUS "openmp debug flags: " ${CMAKE_Fortran_FLAGS})
    else()
        set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${OpenMP_Fortran_FLAGS}")
        message(STATUS "openmp release flags: " ${CMAKE_Fortran_FLAGS})
    endif()
endif()
# set cuda option
if(ENABLE_CUDACG)
    set(CUDA_FLAGS " ")
    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${CUDA_FLAGS}")
    message(STATUS "cuda flags: " ${CUDA_FLAGS})
endif()

# output system type and build type
message(STATUS "System: " ${CMAKE_SYSTEM_NAME})
message(STATUS "Build Type: " ${CMAKE_BUILD_TYPE})
message(STATUS "compile flags: " ${CMAKE_Fortran_FLAGS})

# set project, executable and libs
add_subdirectory(fqmc)
add_subdirectory(simu)
if (NOT ENABLE_CUDACG)
    add_subdirectory(anal)
endif()
